# rag-benchmarking

./: .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/eval_cases/: sec_filings_v1.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_query_trace_answer.py  0002_dataset_domain_overrides.py  0002_job_fault_tolerance.py  0002_widen_eval_run_system_variant.py  0003_dataset_override_lengths.py  0003_eval_metric_extensions.py  0004_consolidate_chunk_embedding.py  0004_scientific_eval_gold_fields.py  0005_eval_result_variant_name.py
backend/rag_benchmarking/: __init__.py  eval_packs.py  main.py
backend/rag_benchmarking/api/: deps.py  pagination.py  serialization.py
backend/rag_benchmarking/api/routes/: datasets.py  documents.py  eval_cases.py  eval_packs.py  evaluations.py  health.py  ingestions.py  jobs.py  query.py
backend/rag_benchmarking/core/: config.py  logging.py
backend/rag_benchmarking/db/: session.py
backend/rag_benchmarking/evaluation/: __init__.py  runner.py
backend/rag_benchmarking/ingestion/: __init__.py  chunking.py  documents.py  metadata.py  parsing.py  pipeline.py  queueing.py
backend/rag_benchmarking/providers/: __init__.py  mistral.py  openrouter.py
backend/rag_benchmarking/retrieval/: agents.py  generation.py  hybrid.py  planning.py  query.py  verification.py
backend/rag_benchmarking/scripts/: analyze_ablation.py  backfill_eval_metrics.py  compare_ablations.py  run_eval.py  seed_eval_cases.py  verify_eval_cases.py
backend/rag_benchmarking/storage/: minio.py
backend/rag_benchmarking/workers/: __init__.py  celery_app.py  dispatch.py  job_state.py  retention.py  sweeper.py  tasks.py
backend/tests/: conftest.py  test_agents_fallback.py  test_chunking.py  test_citation_repair.py  test_dataset_config.py  test_decomposition.py  test_eval_judge.py  test_eval_metrics.py  test_eval_runner_variants.py  test_eval_variants.py  test_fault_tolerance.py  test_hybrid_fusion.py  test_hybrid_lesions.py  test_hyde.py  test_ingestion_run_state.py  test_main_spa.py  test_metadata.py  test_mistral_ocr.py  test_observability.py  test_openrouter_temperature.py  test_paired_stats.py  test_parsing_ocr.py  test_pipeline_e2e.py  test_pipeline_failure.py  test_planner_fallback_uses_config.py  test_planning.py  test_pricing.py  test_prompts_dataset_aware.py  test_register_sec_backfill.py  test_retention.py  test_retrieval_agent.py  test_retrieval_tool.py  test_routes_datasets.py  test_routes_documents_urls.py  test_routes_eval_cases.py  test_routes_health.py  test_routes_ingestions.py  test_routes_query.py  test_scientific_eval_scoring.py  test_seed_eval_cases.py  (+3 more)
docs/: agentic-retrieval.md  implementation-report.md  methodology-report.md  system-design.md
docs/adr/: 0001-core-stack.md  0002-minio-object-storage.md  0003-document-parsing.md  0004-table-aware-chunking.md  0005-retrieval-store.md  0006-agentic-retrieval.md  0007-background-jobs.md  0008-api-surface-and-auth.md  0009-evaluation-strategy.md  0010-frontend-application.md  0011-ai-provider-gateway.md  README.md
docs/eval/: ablation_v1_plan.md  sec_filings_v1_review.md  sec_filings_v1_verification.md
frontend/: .cta.json  .dockerignore  .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
frontend/src/lib/: answer.ts  api.test.ts  api.ts  filters.ts  format.test.ts  format.ts  pdfViewer.ts  polling.ts  queryKeys.ts  routes.ts  useNow.ts  zodResolver.ts
frontend/src/providers/: ThemeProvider.tsx  ToastProvider.tsx  (+1 more)
scripts/: _report_metrics.py  finalize_eval.py
(+85 files in other folders)
