[project]
name = "rag-benchmarking"
version = "0.1.0"
description = "SEC filings agentic RAG benchmark with FastAPI, Celery, pgvector, MinIO, and React."
readme = "README.md"
requires-python = ">=3.13"
# The root package is the lean API + scheduler/migrate. Heavy ingestion deps
# (docling/chonkie/pypdf/ragas/mistral) live exclusively in `rag-ingestion-worker`
# so `uv sync --package rag-benchmarking` produces an image that never pulls them.
dependencies = [
  "alembic>=1.16.0",
  "celery[redis]>=5.5.0",
  "fastapi[standard]>=0.115.0",
  "httpx>=0.28.0",
  "minio>=7.2.0",
  "numpy>=2.2.0",
  "pgvector>=0.3.6",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "rag-common",
  "rag-retrieval",
  "sqlalchemy>=2.0.40",
  "structlog>=25.2.0",
  "tenacity>=9.1.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
rag-common = { workspace = true }
rag-retrieval = { workspace = true }
rag-ingestion-worker = { workspace = true }
rag-evaluation-worker = { workspace = true }
# docling pulls torch + torchvision; force them off PyTorch's CPU-only index
# so the multi-GB CUDA / nvidia wheels stay out of the ingestion-worker image.
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_benchmarking"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "NPY",      # Some numpy-specific things
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert"
    "COM",      # enforce trailing comma rules
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
]

ignore = [
    "COM812",   # Trailing comma on single-line — conflicts with ruff formatter
]

[tool.ruff.lint.pydocstyle]
# https://github.com/google/styleguide/blob/gh-pages/pyguide.md#38-comments-and-docstrings
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["celery.*", "pgvector.*", "chonkie.*", "pypdf.*", "ragas.*", "docling.*", "docling_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "rag_ingestion_worker.tasks",
  "rag_evaluation_worker.tasks",
  "rag_benchmarking.workers.sweeper",
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
